--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ anyio==4.8.0
 bcrypt==4.2.1
 certifi==2024.12.14
 click==8.1.8
+distro==1.9.0
 dnspython==2.7.0
 ecdsa==0.19.0
 email_validator==2.2.0
@@ -14,9 +15,11 @@ httptools==0.6.4
 httpx==0.28.1
 idna==3.10
 Jinja2==3.1.5
+jiter==0.8.2
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+openai==1.60.1
 passlib==1.7.4
 pyasn1==0.6.1
 pydantic==2.10.6
@@ -34,6 +37,7 @@ six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.37
 starlette==0.45.3
+tqdm==4.67.1
 typer==0.15.1
 typing_extensions==4.12.2
 uvicorn==0.34.0
